# mlde_utils

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  bp-cuda-environment.yml  bp-environment.yml  bp-script  check-data.py  check-nc-datasets.py  check-variables.py  coarsen-cpm.py  download-ukcp18  environment.ci.yml  experiments.yml  fix-nc-dataset.py  fix-variable.py  jasmin-downscaling-enviornment.yml  local-test-train  moose-script  netcdf-to-numpy.py  pyproject.toml  regrid-gcm.py  regrid-job.sh  sci-jasmin-script  select-subregion.py  simple-environment.yml  simple_file_downloader.py  split-gcm.py  submit-training-job  tox.ini  train-model.py  train-simple-conv.py  train-unet.py  train-val-split.py
.github/workflows/: ci.yml  lint.yml  publish-to-pypi.yml
learning/: 60km GCM data.ipynb  GLM and PySTEPS.ipynb  Presentation.ipynb  matching 2.2km grid to 60km grid.ipynb  multifile 2.2km dataset.ipynb  single 2.2km pr snapshot.ipynb  u-net.ipynb  xarray.ipynb
learning/unet/: README.md  __init__.py  unet_model.py  unet_parts.py
moose-etl/: batch-wrapper  bp-script  etl-variable.py  extract-script  get-data-sample  get-dataset  master-script  queue-dep  queue-dep-func  transform-script  ts3.batch  xfer-script  xfer-script-direct
moose-etl/cpm/: extract-pr  extract-target-pr  extract-temp250  extract-vorticity850
moose-etl/cpm-pr/: master-script
moose-etl/cpm-target-pr/: master-script  queue-dep
moose-etl/cpm-vorticity/: master-script
moose-etl/gcm/: extract-lin-pr  extract-pr  extract-temp250  extract-vorticity850
moose-etl/gcm-pr/: master-script
moose-etl/gcm-target-grid/: get-grid  searchfile  transform.py
moose-etl/gcm-vorticity/: master-script  queue-dep
moose-etl/pr/: master-script  pr-ts1.batch  pr-ts2.batch  pr-ts3.batch  ts1.batch  ts2.batch  ts3.batch  xfer-script
moose-etl/psl/: ts1.batch  ts2.batch  ts3.batch
moose-etl/uk-pr/: master-script  xfer-script
moose-etl/vorticity/: master-script  ts1.batch  ts2.batch  ts3.batch  xfer-script
preprocessing/: coarsen.py  regrid.py  select_subregion.py  split_by_year.py  train_val_split.py
src/mlde_utils/: __init__.py  evaluation.py  helpers.py  moose.py  plotting.py  torch.py  transforms.py
tests/: example_moose_extract.nc  test_moose.py
tests/data/: test_coarsen.py  test_sum.py  (+3 more)
training/: __init__.py
(+176 files in other folders)
