[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_utils"
version = "0.2.0a5"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for shared code between ML downscaling repos"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde_utils"
"Bug Tracker" = "https://github.com/henryaddison/mlde_utils/issues"
